--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "postinstall": "npm run build",
     "postbuild": "copyfiles index.html dist",
     "dev-server": "webpack --progress --colors --watch --define \"process.env.NODE_ENV\"=\"'development'\" --config=webpack.config.dev.js",
     "prod-server": "webpack --progress --colors --watch --define \"process.env.NODE_ENV\"=\"'production'\" --config=webpack.config.prod.js"
