--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
-    "postbuild": "copyfiles index.html dist",
+    "postbuild": "copyfiles index.html dist"
   },
   "devDependencies": {
     "babel-loader": "6.2.10",
