--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "webpack-dev-server",
     "prebuild": "rimraf build",
-    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "post-install": "npm run build"
   },
   "devDependencies": {
     "babel-loader": "6.2.10",
