--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack-dev-server",
     "prebuild": "rimraf build",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
-    "post-install": "npm run build"
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "babel-loader": "6.2.10",
