--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-redux": "4.4.5",
     "style-loader": "0.12.2",
     "url-loader": "0.5.5",
-    "webpack": "2.2.0",
     "webpack-dev-server": "2.2.0"
   },
   "dependencies": {
@@ -81,6 +80,7 @@
     "reselect": "2.5.3",
     "rimraf": "2.6.0",
     "store": "2.0.4",
-    "urijs": "1.18.1"
+    "urijs": "1.18.1",
+    "webpack": "2.2.0"
   }
 }
