--- a/package.json
+++ b/package.json
@@ -1,58 +1,29 @@
 {
-  "name": "NoahPotter",
-  "version": "0.0.1",
-  "engines": {
-    "node": "8.9.1"
+  "name": "personal-site",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "4.0.0",
+    "clsx": "^1.0.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-images": "^0.5.19",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "webpack-dev-server",
-    "prebuild": "rimraf build",
-    "build": "webpack -p --config webpack.config.production.js",
-    "postinstall": "npm run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "babel-loader": "6.2.10",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
-    "babel-preset-stage-2": "6.22.0",
-    "copyfiles": "1.2.0",
-    "css-loader": "0.28.1",
-    "file-loader": "0.8.1",
-    "imports-loader": "0.6.5",
-    "json-loader": "0.5.4",
-    "null-loader": "0.1.1",
-    "raw-loader": "0.5.1",
-    "react-hot-loader": "3.0.0-beta.6",
-    "style-loader": "0.12.2",
-    "url-loader": "0.5.5",
-    "webpack-dev-server": "2.2.0"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "dependencies": {
-    "babel-core": "6.22.1",
-    "classnames": "2.2.5",
-    "color": "0.11.3",
-    "core-js": "2.4.0",
-    "cross-env": "3.1.4",
-    "es6-shim": "0.35.1",
-    "express": "4.12.3",
-    "flexboxgrid": "6.3.1",
-    "immutable": "3.7.3",
-    "jss": "6.3.0",
-    "jss-preset-default": "1.3.1",
-    "pui-react-overlay-trigger": "7.0.0",
-    "pui-react-tooltip": "7.0.0",
-    "react": "15.5.4",
-    "react-addons-perf": "15.4.0",
-    "react-copy-to-clipboard": "4.2.3",
-    "react-dom": "15.5.4",
-    "react-portal": "2.2.1",
-    "react-portal-children": "2.2.1-1",
-    "react-remarkable": "1.1.1",
-    "react-textarea-autosize": "4.0.5",
-    "rimraf": "2.6.0",
-    "urijs": "1.18.1",
-    "webpack": "2.2.0"
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
